# finetune-fsdp_qlora

./: .gitignore  data_generation.py  pyproject.toml  train.py
configs/: qwen3_multigpu.yaml
